# flask-project

./: .env  .env.template  LICENSE  README.md  app.py  pyproject.toml  requirements.txt  routes.http
routes/: homepage.py  login.py  password.py  register.py
src/: CalculadoraController.py  LoginController.py  PasswordGenerator.py  __init__.py
src/Controllers/: LoginController.py  PasswordGenerator.py  UserController.py
src/controllers/: LoginController.py  PasswordGenerator.py  UserController.py  login_controller.py  password_generator.py  user_controller.py
src/dao/: ConnectionFactory.py  GenericsDao.py  UserDao.py  __init__.py  user_dao.py
src/models/: AdminModel.py  CalculadoraModel.py  UserModel.py  admin.py  user.py
src/routes/: auth.py  homepage.py  password.py  profile.py
src/tests/: test_Calculadora.py
static/: homepage.css  index.css  styles.css
templates/: homepage.html  index.html  login.html  register.html  update.html
tests/: test_Calculadora.py  test_PasswordGenerator.py  test_UserDao.py  test_password_generator.py  test_user.py  test_user_dao.py
